--- a/src/partials/top_sellers.html
+++ b/src/partials/top_sellers.html
@@ -1,9 +1,9 @@
 <!--     TOP-SELLERS   -->
-<section id="top-selers" class="section-sellers">
+<section id="top-sellers" class="section-sellers">
     <div class="container">
         <h2 class="name-sellers"><span class="orange">TOP</span> SELLERS
         </h2>
-
+  
         <ul class="list-sellers">
             <li class="item-sellers">
 
@@ -36,8 +36,15 @@
                     ./img/top-sellers/img02@2xmobile.jpg 2x" media="(max-width: 768px)" type="image/jpg" />
                     <img src="./img/top-sellers/img02@1xdesk" alt="nuts-chocolate">
                 </picture>
-            </li>
 
+                <p class="text-mobile">
+                    Crazy enough chocolate originates from a bean just like the coffee
+                    bean called Cacao. Cacao has been around for thousands of years and
+                    was first discovered by the Native American tribe called the Mayans.
+                </p>
+
+            </li>
+                    
 
             <li class="item-sellers">
 
@@ -47,7 +54,7 @@
                     <!--milk-chocolate-desk-web p-->
                     <source srcset="./img/top-sellers/img01@1xdesk-milk-chocolate.webp 1x, 
                         ./img/top-sellers/img01@2xdesk-milk-chocolate.webp 2x" media="(min-width: 1200px)"
-                        type="image/webp" />
+                        type="image/webp"/>
 
                     <!--milk-chocolate-desk-jpg--->
                     <source srcset="./img/top-sellers/.jpg 1x, 
@@ -56,17 +63,17 @@
                     <!--milk-chocolate-tablet-web p-->
                     <source srcset="./img/top-sellers/img01@1tablet-milk-chocolate.webp 1x, 
                         ./img/top-sellers/img01@2xtablet-milk-chocolate.webp 2x" media="(min-width: 768px)"
-                        type="image/webp" />
+                        type="image/webp"/>
 
                     <!--milk-chocolate-tablet-jpg-->
                     <source srcset="./img/top-sellers/img01@1tablet-milk-chocolate.jpg 1x, 
                                       ./img/top-sellers/img01@2xtablet-milk-chocolate.jpg 2x"
-                        media="(min-width: 768px)" type="image/jpg" />
+                        media="(min-width: 768px)" type="image/jpg"/>
 
                     <!--milk-chocolate-mobile-web p-->
                     <source srcset="./img/top-sellers/img01@1xmobile-milk-chocolate.webp 1x, 
                             ./img/top-sellers/img01@2xmobile-milk-chocolate.webp 2x" media="(max-width: 768px)"
-                        type="image/webp" />
+                        type="image/webp"/>
 
                     <!--milk-chocolate-mobile-jpg-->
                     <source srcset="./img/top-sellers/img01@1xmobile-milk-chocolate.jpg 1x, 
@@ -94,8 +101,8 @@
 
             </li>
 
-            <li class="item-sellers">
-
+            
+        </ul>
 
                 <div class="text-btn">
 
@@ -104,19 +111,11 @@
                         bean called Cacao. Cacao has been around for thousands of years and
                         was first discovered by the Native American tribe called the Mayans.
                     </p>
-            </li>
-
-
-            <li class="item-sellers">
+        
 
                 <button data-modal-open class="button-sellers" type="button">Buy
                     now</button>
-    </div>
-
-    </li>
-
-    </ul>
-
+               </div>
     </div>
 
 </section>
